@@ -6128,6 +6128,49 @@ name|run
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|allowSnapshot (final Path p)
+specifier|public
+name|void
+name|allowSnapshot
+parameter_list|(
+specifier|final
+name|Path
+name|p
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|statistics
+operator|.
+name|incrementWriteOps
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+specifier|final
+name|HttpOpParam
+operator|.
+name|Op
+name|op
+init|=
+name|PutOpParam
+operator|.
+name|Op
+operator|.
+name|ALLOWSNAPSHOT
+decl_stmt|;
+operator|new
+name|FsPathRunner
+argument_list|(
+name|op
+argument_list|,
+name|p
+argument_list|)
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 DECL|method|createSnapshot (final Path path, final String snapshotName)
@@ -6223,6 +6266,49 @@ operator|.
 name|run
 argument_list|()
 return|;
+block|}
+DECL|method|disallowSnapshot (final Path p)
+specifier|public
+name|void
+name|disallowSnapshot
+parameter_list|(
+specifier|final
+name|Path
+name|p
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|statistics
+operator|.
+name|incrementWriteOps
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+specifier|final
+name|HttpOpParam
+operator|.
+name|Op
+name|op
+init|=
+name|PutOpParam
+operator|.
+name|Op
+operator|.
+name|DISALLOWSNAPSHOT
+decl_stmt|;
+operator|new
+name|FsPathRunner
+argument_list|(
+name|op
+argument_list|,
+name|p
+argument_list|)
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Override
