@@ -231,6 +231,26 @@ operator|.
 name|HTTP_OK
 argument_list|)
 block|,
+DECL|enumConstant|ALLOWSNAPSHOT
+name|ALLOWSNAPSHOT
+argument_list|(
+literal|false
+argument_list|,
+name|HttpURLConnection
+operator|.
+name|HTTP_OK
+argument_list|)
+block|,
+DECL|enumConstant|DISALLOWSNAPSHOT
+name|DISALLOWSNAPSHOT
+argument_list|(
+literal|false
+argument_list|,
+name|HttpURLConnection
+operator|.
+name|HTTP_OK
+argument_list|)
+block|,
 DECL|enumConstant|CREATESNAPSHOT
 name|CREATESNAPSHOT
 argument_list|(
