@@ -4562,6 +4562,34 @@ argument_list|()
 return|;
 block|}
 case|case
+name|ALLOWSNAPSHOT
+case|:
+block|{
+name|np
+operator|.
+name|allowSnapshot
+argument_list|(
+name|fullpath
+argument_list|)
+expr_stmt|;
+return|return
+name|Response
+operator|.
+name|ok
+argument_list|()
+operator|.
+name|type
+argument_list|(
+name|MediaType
+operator|.
+name|APPLICATION_OCTET_STREAM
+argument_list|)
+operator|.
+name|build
+argument_list|()
+return|;
+block|}
+case|case
 name|CREATESNAPSHOT
 case|:
 block|{
@@ -4644,6 +4672,34 @@ name|snapshotName
 operator|.
 name|getValue
 argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|Response
+operator|.
+name|ok
+argument_list|()
+operator|.
+name|type
+argument_list|(
+name|MediaType
+operator|.
+name|APPLICATION_OCTET_STREAM
+argument_list|)
+operator|.
+name|build
+argument_list|()
+return|;
+block|}
+case|case
+name|DISALLOWSNAPSHOT
+case|:
+block|{
+name|np
+operator|.
+name|disallowSnapshot
+argument_list|(
+name|fullpath
 argument_list|)
 expr_stmt|;
 return|return
