@@ -50,6 +50,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|fail
 import|;
 end_import
@@ -395,6 +407,22 @@ operator|.
 name|client
 operator|.
 name|HdfsClientConfigKeys
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|SnapshottableDirectoryStatus
 import|;
 end_import
 
@@ -2476,6 +2504,303 @@ argument_list|,
 name|ex
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|/**    * Test allow and disallow snapshot through WebHdfs. Verifying webhdfs with    * Distributed filesystem methods.    */
+annotation|@
+name|Test
+DECL|method|testWebHdfsAllowandDisallowSnapshots ()
+specifier|public
+name|void
+name|testWebHdfsAllowandDisallowSnapshots
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+specifier|final
+name|Configuration
+name|conf
+init|=
+name|WebHdfsTestUtil
+operator|.
+name|createConf
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+specifier|final
+name|DistributedFileSystem
+name|dfs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+specifier|final
+name|WebHdfsFileSystem
+name|webHdfs
+init|=
+name|WebHdfsTestUtil
+operator|.
+name|getWebHdfsFileSystem
+argument_list|(
+name|conf
+argument_list|,
+name|WebHdfsConstants
+operator|.
+name|WEBHDFS_SCHEME
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Path
+name|bar
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/bar"
+argument_list|)
+decl_stmt|;
+name|dfs
+operator|.
+name|mkdirs
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+comment|// allow snapshots on /bar using webhdfs
+name|webHdfs
+operator|.
+name|allowSnapshot
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+name|webHdfs
+operator|.
+name|createSnapshot
+argument_list|(
+name|bar
+argument_list|,
+literal|"s1"
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Path
+name|s1path
+init|=
+name|SnapshotTestHelper
+operator|.
+name|getSnapshotRoot
+argument_list|(
+name|bar
+argument_list|,
+literal|"s1"
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|webHdfs
+operator|.
+name|exists
+argument_list|(
+name|s1path
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|SnapshottableDirectoryStatus
+index|[]
+name|snapshottableDirs
+init|=
+name|dfs
+operator|.
+name|getSnapshottableDirListing
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|snapshottableDirs
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bar
+argument_list|,
+name|snapshottableDirs
+index|[
+literal|0
+index|]
+operator|.
+name|getFullPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|deleteSnapshot
+argument_list|(
+name|bar
+argument_list|,
+literal|"s1"
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|disallowSnapshot
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+name|snapshottableDirs
+operator|=
+name|dfs
+operator|.
+name|getSnapshottableDirListing
+argument_list|()
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|snapshottableDirs
+argument_list|)
+expr_stmt|;
+comment|// disallow snapshots on /bar using webhdfs
+name|dfs
+operator|.
+name|allowSnapshot
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+name|snapshottableDirs
+operator|=
+name|dfs
+operator|.
+name|getSnapshottableDirListing
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|snapshottableDirs
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bar
+argument_list|,
+name|snapshottableDirs
+index|[
+literal|0
+index|]
+operator|.
+name|getFullPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|webHdfs
+operator|.
+name|disallowSnapshot
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+name|snapshottableDirs
+operator|=
+name|dfs
+operator|.
+name|getSnapshottableDirListing
+argument_list|()
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|snapshottableDirs
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|webHdfs
+operator|.
+name|createSnapshot
+argument_list|(
+name|bar
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Cannot create snapshot on a non-snapshottable directory"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"Directory is not a snapshottable directory"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
