@@ -50,6 +50,9 @@ Trunk (Unreleased)
 
     HDFS-6440. Support more than 2 NameNodes. (Jesse Yates via atm)
 
+    HDFS-9057. allow/disallow snapshots via webhdfs
+    (Bramma Reddy Battula via vinayakumarb)
+
   IMPROVEMENTS
 
     HDFS-4665. Move TestNetworkTopologyWithNodeGroup to common.
